@@ -15,6 +15,7 @@ SBuild trunk
   "source:mvn:a.b.1" will be translated to "mvn:a.b.1;classifier=sources"
 * Fixed --fsc option.
 * Fixed colored output under windows.
+* BndJar addon creates target directory, if it does not exists.
 
 SBuild 0.4.0 - 2013-03-09
 
